# PEA

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  app.py  double_pulse_test_report (1).json  double_pulse_test_report.json  index.html  pyproject.toml  requirements.txt  run_pea_desktop.bat  test_agent.py
.streamlit/: config.toml
data/: README.md
data/raw/: erickson_extracted.txt
data/spice_models_json/: README.md  catalog.json  ui_catalog.json
data/spice_models_json/files/Bare Die/: CPM2-1200-0025B.lib.json  CPM2-1200-0040B.lib.json  CPM2-1200-0080B.lib.json  CPM2-1200-0160B.lib.json  CPM2-1700-0045B.lib.json  CPM3-0900-0010A.lib.json  CPM3-0900-0065A.lib.json  CPM3-1200-0013A.lib.json  CPM3-1200-0016A.lib.json  CPM3-1200-0021A.lib.json  CPM3-1200-0032A.lib.json  CPM3-1200-0075A.lib.json  CPM4-0120-0104JS0A.lib.json  CPM4-0120-0149JS0A.lib.json  EPM3-1200-0017C.lib.json  EPM3-1200-0017D.lib.json  EPM3-1200-0017D1.lib.json  EPM4-0120-0260JS0A.lib.json
data/spice_models_json/files/Discretes/: C2M0025120D.lib.json  C2M0040120D.lib.json  C2M0045170D.lib.json  C2M0045170P.lib.json  C2M0080120D.lib.json  C2M0080170P.lib.json  C2M0160120D.lib.json  C2M0280120D.lib.json  C2M1000170D.lib.json  (+123 more)
pea/: __init__.py  cli.py  desktop.py
pea/agent/: __init__.py  runner.py
pea/components/: __init__.py  schema.py
pea/knowledge/: __init__.py  documents.py  retriever.py
pea/tools/: __init__.py  calculator.py  langchain_tools.py  magnetics_data.py
scripts/: agent_smoke_test.py  extract_pdf.py  spice_to_json.py
tests/: test_calculator.py
(+262 files in other folders)
