[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pea"
version = "0.1.0"
description = "Power Electronics AI Agent - Design assistant for DC-DC converters"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Fulong Li" }]
keywords = ["power electronics", "AI", "DC-DC", "converter design"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.0.5",
    "chromadb>=0.4.22",
    "streamlit>=1.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
pea = "pea.cli:run_cli"

[tool.setuptools.packages.find]
include = ["pea*"]
